--- a/platnosci.html
+++ b/platnosci.html
@@ -8,8 +8,8 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/p24.css">
-    <script src="js/sha512.js" type="text/javascript"></script>
-    <script src="js/p24.js" type="text/javascript"></script>
+    <script src="js/p24/sha512.js" type="text/javascript"></script>
+    <script src="js/p24/p24.js" type="text/javascript"></script>
   </head>
   <body>
 
@@ -49,8 +49,8 @@
                 <label for="isp24" class="align-middle">Przelewy24</label><br>
               </div>
               <div class="arrow col-8"  onclick="openDescription('p24','p24description','p24ArrowUp','p24ArrowDown')">
-                <img id="p24ArrowDown" src="img/arrow_down_white.png" alt=" show description">
-                <img id="p24ArrowUp" class="hide" src="img/arrow_up_white.png" alt="hide description">
+                <img id="p24ArrowDown" src="img/p24/arrow_down_white.png" alt=" show description">
+                <img id="p24ArrowUp" class="hide" src="img/p24/arrow_up_white.png" alt="hide description">
               </div>
               <div id="p24description" class="text text-justify col text-left">
                 <p>Serwis Przelewy24 specjalizuje się w tworzeniu i eksploatacji oprogramowania przeznaczonego dla szerokiego zakresu usług łączących klientów biznesowych oraz indywidualnych. Dostrzegając postęp w dziedzinie technologii, postanowiliśmy skonstruować wyjątkowy produkt, narzędzie usprawniające i znacznie przyspieszające procesy płatności on-line. Od początku istnienia posługujemy się szerokim zakresem narzędzi, aby finalny użytkownik tworzonego przez nas oprogramowania, dostał to na czym mu najbardziej zależy</p>
@@ -65,8 +65,8 @@
                 <label for="iscard" class="align-middle">Visa, MasterCard</label><br>
               </div>
               <div class="arrow col-7"  onclick="openDescription('card','cardDescription','cardArrowUp','cardArrowDown')">
-                <img id="cardArrowDown" src="img/arrow_down_white.png" alt=" show description">
-                <img id="cardArrowUp" class="hide" src="img/arrow_up_white.png" alt="hide description">
+                <img id="cardArrowDown" src="img/p24/arrow_down_white.png" alt=" show description">
+                <img id="cardArrowUp" class="hide" src="img/p24/arrow_up_white.png" alt="hide description">
               </div>
               <div id="cardDescription" class="text text-justify col text-left">
                 <p>Wpłaty na konto bankowe przyjmujemy również w $ € (w przelewie napisz numier oferty)</p>
@@ -81,8 +81,8 @@
                 <label for="isKonto" class="align-middle">Zapłać z konta</label><br>
               </div>
               <div class="arrow col-6"  onclick="openDescription('konto','kontoDescription','kontoArrowUp','kontoArrowDown')">
-                <img id="kontoArrowDown" src="img/arrow_down_white.png" alt=" show description">
-                <img id="kontoArrowUp" class="hide" src="img/arrow_up_white.png" alt="hide description">
+                <img id="kontoArrowDown" src="img/p24/arrow_down_white.png" alt=" show description">
+                <img id="kontoArrowUp" class="hide" src="img/p24/arrow_up_white.png" alt="hide description">
               </div>
               <div id="kontoDescription" class="text text-justify col text-left">
                 <p>Na loncie masz: 999 999 zł</p>
@@ -100,8 +100,8 @@
                 </div>
               </div>
               <div class="arrow col-5"  onclick="openDescription('card','dotacjaDescription','dotacjaArrowUp','dotacjaArrowDown')">
-                <img id="dotacjaArrowDown" src="img/arrow_down_white.png" alt=" show description">
-                <img id="dotacjaArrowUp" class="hide" src="img/arrow_up_white.png" alt="hide description">
+                <img id="dotacjaArrowDown" src="img/p24/arrow_down_white.png" alt=" show description">
+                <img id="dotacjaArrowUp" class="hide" src="img/p24/arrow_up_white.png" alt="hide description">
               </div>
               <div id="dotacjaDescription" class="text text-justify col text-left">
                 <p>Dotacja na rozwój portalu</p>
@@ -129,8 +129,8 @@
                 <label for="isKonkurs" class="align-middle">Biorę udział w konkursach</label><br>
               </div>
               <div class="arrow col-6"  onclick="openDescription('konkurs','konkursDescription','konkursArrowUp','konkursArrowDown')">
-                <img id="konkursArrowDown" src="img/arrow_down_white.png" alt=" show description">
-                <img id="konkursArrowUp" class="hide" src="img/arrow_up_white.png" alt="hide description">
+                <img id="konkursArrowDown" src="img/p24/arrow_down_white.png" alt=" show description">
+                <img id="konkursArrowUp" class="hide" src="img/p24/arrow_up_white.png" alt="hide description">
               </div>
               <div id="konkursDescription" class="text text-justify col text-left">
                 <p>Chce sprobować otrzymać prezent</p>
@@ -145,8 +145,8 @@
                 <label for="isRabat" class="align-middle">Mam kod rabatowy</label><br>
               </div>
               <div class="arrow col-6"  onclick="openDescription('rabat','rabatDescription','rabatArrowUp','rabatArrowDown')">
-                <img id="rabatArrowDown" src="img/arrow_down_white.png" alt=" show description">
-                <img id="rabatArrowUp" class="hide" src="img/arrow_up_white.png" alt="hide description">
+                <img id="rabatArrowDown" src="img/p24/arrow_down_white.png" alt=" show description">
+                <img id="rabatArrowUp" class="hide" src="img/p24/arrow_up_white.png" alt="hide description">
               </div>
               <div id="rabatDescription" class="text text-justify col text-left">
                 <p>kod rabatowy otrzymujesz meilem</p>
