--- a/zkonto.html
+++ b/zkonto.html
@@ -7,9 +7,9 @@
     <title>P24</title>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/p24.css">
-    <script src="js/sha512.js" type="text/javascript"></script>
-    <script src="js/p24.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="css/p24/p24.css">
+    <script src="js/p24/sha512.js" type="text/javascript"></script>
+    <script src="js/p24/p24.js" type="text/javascript"></script>
   </head>
   <body>
     <div class="container">
